--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>welcome</title>
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="styles/index.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
@@ -13,7 +13,7 @@
 <body>
     <div id="videoContainer">
         <video id="introVideo" autoplay muted>
-            <source src="/resources/intro_video.mp4" type="video/mp4">
+            <source src="resources/intro_video.mp4" type="video/mp4">
         </video>
     </div>
     <div id="content" class="content">
@@ -55,6 +55,6 @@
             </div>
         </div>
     </div>
-    <script src="/js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
